2003-08-22  Martin Fuchs	<martin-fuchs@gmx.net>

	* subsys/system/explorer/taskbar/traynotify.cpp:
	Added tray notification area.

2003-08-22  Martin Fuchs	<martin-fuchs@gmx.net>

	* include/wine/commctrl.h:
	Removed commctrl.h header file to use the one of W32API headers.

2003-08-19  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* subsys/win32k/ntuser/menu.c (IntSetMenuDefaultItem,
	IntGetMenuDefaultItem): Fix unsigned/signed warnings.

2003-08-19  Martin Fuchs	<martin-fuchs@gmx.net>

	* subsys/system/explorer/taskbar/startmenu.cpp:
	Implemented navigation in submenus of the start menu.
	Start menus can now resolve shortcuts and launch programs.

2003-08-18  Martin Fuchs	<martin-fuchs@gmx.net>

	* subsys/system/explorer/taskbar/taskbar.cpp:
	First draft of explorer start menu.

2003-08-17  James Tabor <jimtabor@adsl-64-217-116-74.dsl.hstntx.swbell.net>

	* include/csrss/: csrss.h: implemented Ctrl Event handler
	* subsys/csrss/api/: conio.c:
	* subsys/csrss/: api.h:
	* lib/kernel32/misc/: console.c:

2003-08-16  Martin Fuchs	<martin-fuchs@gmx.net>

	* subsys/system/explorer/taskbar/taskbar.cpp:
	first draft of working task bar

2003-08-13  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* include/win32k/ntuser.h (NtUserGetClassName): Make nMaxCount an ULONG.
	* subsys/win32k/dib/dib16bpp.c: Fix unsigned/signed warnings.
	* subsys/win32k/dib/dib1bpp.c: Ditto.
	* subsys/win32k/dib/dib32bpp.c: Ditto.
	* subsys/win32k/dib/dib4bpp.c: Ditto.
	* subsys/win32k/dib/dib8bpp.c: Ditto.
	* subsys/win32k/eng/lineto.c: Ditto.
	* subsys/win32k/eng/mouse.c: Ditto.
	* subsys/win32k/eng/xlate.c: Ditto.
	* subsys/win32k/misc/driver.c: Ditto.
	* subsys/win32k/ntuser/class.c: Ditto.
	* subsys/win32k/ntuser/keyboard.c: Ditto.
	* subsys/win32k/ntuser/timer.c: Ditto.
	* subsys/win32k/ntuser/window.c: Ditto.
	* subsys/win32k/objects/bitmaps.c: Ditto.
	* subsys/win32k/objects/color.c: Ditto.
	* subsys/win32k/objects/coord.c: Ditto.
	* subsys/win32k/objects/dib.c: Ditto.